--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,6 +1,8 @@
-<p>
-  blogs works!
-</p>
+<div>
+  <md-toolbar>
+    <span>BLOG</span>
+  </md-toolbar>
+</div>
 <div>
   <router-outlet></router-outlet>
 </div>
