--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1>
+<!--<h1>
   {{title}}
-</h1>
+</h1>-->
+<!--<md-toolbar>
+  <span>SSSS</span>
+</md-toolbar>-->
 <router-outlet></router-outlet>
