--- a/src/app/blogs/list/list.component.html
+++ b/src/app/blogs/list/list.component.html
@@ -12,8 +12,8 @@
     </md-list>
   </div>-->
   <div>
-    <div *ngFor="let category of blogsMap.categorys">
-      <md-card>
+    <div *ngFor="let category of blogsMap.categorys" class="flex">
+      <md-card style="background:#90CAF9">
         <md-card-title>{{category.category_name}}</md-card-title>
         <md-card-content>
           <div>
