artial页面刷新失败问提，解决，由于路径中带 . 点的问题

--- a/src/app/blogs/blog/blog.component.html
+++ b/src/app/blogs/blog/blog.component.html
@@ -1,3 +1,11 @@
-<div class="artical_content">
-  <div [innerHTML]="content"></div>
+<div>
+  <md-card class="artial-card">
+    <md-card-title>artials</md-card-title>
+    <md-card-content>
+      <div class="artical_content">
+        <div [innerHTML]="content"></div>
+      </div>
+    </md-card-content>
+  </md-card>
 </div>
+
