use marked.js correct

--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,8 +1,8 @@
 <div>
-  <md-toolbar>
+  <md-toolbar color="primary">
     <span>BLOG</span>
   </md-toolbar>
 </div>
-<div>
+<div style="background:#F5F5F5">
   <router-outlet></router-outlet>
 </div>
