--- a/src/app/blogs/edit-blog/edit-blog.component.html
+++ b/src/app/blogs/edit-blog/edit-blog.component.html
@@ -1,6 +1,3 @@
-<!--<p>
-  edit-blog works!
-</p>-->
 <div>
   <div style="display:inline-block;">
     <md-input placeholder="Title" [(ngModel)]="articalTitle"></md-input>
@@ -15,7 +12,7 @@
   </div>
   <div style="display:inline-block;">
     <select name="content-type" id="content-type" [(ngModel)]="contentType">
-      <option value="html" selected>html</option>
+      <option value="html">html</option>
       <option value="markdown">markdown</option>
       <option value="text">text</option> 
     </select>
@@ -29,8 +26,6 @@
     <textarea name="blog-content" id="blog-content" cols="98%" rows="10" [(ngModel)]="blogContent"></textarea>
   </div>
   <div>
-    <!--<p>{{blogContent | blog:'markdown-to-html'}}</p>-->
-    <div innerHTML="{{blogContent}}"></div>
-    <!--<div innerHTML="{{blogContent | blog:'markdown-to-html'}}"></div>-->
+    <div [innerHTML]="blogContent | blog:contentType"></div>
   </div>
 </div>
