--- a/src/app/blogs/list/list.component.css
+++ b/src/app/blogs/list/list.component.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0.5em;
   list-style: none;
-  
+
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -13,4 +13,14 @@
   flex-flow: row wrap;
 
   justify-content: space-around;
+}
+
+.card {
+  width: 25em;
+  height: 8em;
+}
+
+.content {
+  overflow: hidden;
+  height: 6em;
 }
