--- a/src/app/blogs/list/list.component.html
+++ b/src/app/blogs/list/list.component.html
@@ -49,3 +49,8 @@
     </md-card>
   </div>
 </div>
+<div class="float-button">
+  <button md-fab [routerLink]="['/blogs/edit-blog']">
+    <md-icon>add</md-icon>
+  </button>
+</div>
